# mcc

./: Cargo.toml  README.md  rustfmt.toml
src/: main.rs
src/tokenizer/: mod.rs  patterns.rs
